Code review of most of Glyph.py; currently in _input_checks()

--- a/logomaker/examples/Example_CRP.ipynb
+++ b/logomaker/examples/Example_CRP.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -215,358 +215,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>color_scheme</th>\n",
-       "      <th>characters</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>classic</td>\n",
-       "      <td>ACGTU</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>grays</td>\n",
-       "      <td>ACGTU</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>base_pairing</td>\n",
-       "      <td>ACGTU</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>hydrophobicity</td>\n",
-       "      <td>ACDEFGHIKLMNPQRSTVWY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>chemistry</td>\n",
-       "      <td>ACDEFGHIKLMNPQRSTVWY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>charge</td>\n",
-       "      <td>ACDEFGHIKLMNPQRSTVWY</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>NajafabadiEtAl2017</td>\n",
-       "      <td>ACDEFGHIKLMNPQRSTVWY</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         color_scheme            characters\n",
-       "0             classic                 ACGTU\n",
-       "1               grays                 ACGTU\n",
-       "2        base_pairing                 ACGTU\n",
-       "3      hydrophobicity  ACDEFGHIKLMNPQRSTVWY\n",
-       "4           chemistry  ACDEFGHIKLMNPQRSTVWY\n",
-       "5              charge  ACDEFGHIKLMNPQRSTVWY\n",
-       "6  NajafabadiEtAl2017  ACDEFGHIKLMNPQRSTVWY"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "x = .5\n",
+    "0 <= x <= 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "logomaker.list_color_schemes()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>A</th>\n",
-       "      <th>C</th>\n",
-       "      <th>G</th>\n",
-       "      <th>T</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pos</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>133.0</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>88.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>147.0</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>107.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>166.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>128.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>164.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>43.0</td>\n",
-       "      <td>123.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>133.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>133.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>42.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>245.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>33.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>249.0</td>\n",
-       "      <td>60.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>30.0</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>260.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>37.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>260.0</td>\n",
-       "      <td>43.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>235.0</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>34.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>79.0</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>168.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>72.0</td>\n",
-       "      <td>115.0</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>91.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>72.0</td>\n",
-       "      <td>90.0</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>140.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>138.0</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>91.0</td>\n",
-       "      <td>81.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>79.0</td>\n",
-       "      <td>77.0</td>\n",
-       "      <td>103.0</td>\n",
-       "      <td>99.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>138.0</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>90.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>33.0</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>263.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>46.0</td>\n",
-       "      <td>261.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>36.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>250.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>34.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>62.0</td>\n",
-       "      <td>244.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>36.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>231.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>45.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>97.0</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>142.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>120.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>178.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>116.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>174.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>90.0</td>\n",
-       "      <td>54.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>174.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>103.0</td>\n",
-       "      <td>62.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>133.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         A      C      G      T\n",
-       "pos                            \n",
-       "0    133.0   65.0   72.0   88.0\n",
-       "1    147.0   46.0   58.0  107.0\n",
-       "2    166.0   26.0   38.0  128.0\n",
-       "3    164.0   28.0   43.0  123.0\n",
-       "4    133.0   45.0   47.0  133.0\n",
-       "5     42.0   42.0   29.0  245.0\n",
-       "6     33.0   16.0  249.0   60.0\n",
-       "7     30.0   39.0   29.0  260.0\n",
-       "8     37.0   18.0  260.0   43.0\n",
-       "9    235.0   41.0   48.0   34.0\n",
-       "10    79.0   56.0   55.0  168.0\n",
-       "11    72.0  115.0   80.0   91.0\n",
-       "12    72.0   90.0   56.0  140.0\n",
-       "13   138.0   48.0   91.0   81.0\n",
-       "14    79.0   77.0  103.0   99.0\n",
-       "15   138.0   62.0   68.0   90.0\n",
-       "16    33.0   31.0   31.0  263.0\n",
-       "17    46.0  261.0   15.0   36.0\n",
-       "18   250.0   30.0   44.0   34.0\n",
-       "19    62.0  244.0   16.0   36.0\n",
-       "20   231.0   36.0   46.0   45.0\n",
-       "21    97.0   68.0   51.0  142.0\n",
-       "22   120.0   40.0   20.0  178.0\n",
-       "23   116.0   44.0   24.0  174.0\n",
-       "24    90.0   54.0   40.0  174.0\n",
-       "25   103.0   62.0   60.0  133.0"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "logomaker.validate_matrix(counts_df)"
+    "type(ax)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib.axes._subplots import Axes\n",
+    "isinstance(ax, Axes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xs = np.random.randn(10)\n",
+    "ys = np.random.randn(10)\n",
+    "plt.plot(xs,ys)\n",
+    "\n",
+    "ax = plt.gca()\n",
+    "isinstance(ax, Axes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib.axes import Axes\n",
+    "isinstance(ax, Axes)"
    ]
   },
   {
