--- a/logomaker/jupyter_notebooks/Example_Janganathan.ipynb
+++ b/logomaker/jupyter_notebooks/Example_Janganathan.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -320,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
