Fixed up problems with examples and figure generation

--- a/logomaker/figure/Figure_draw.ipynb
+++ b/logomaker/figure/Figure_draw.ipynb
@@ -24,54 +24,62 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Description of example matrix \"crp_energy_matrix\":\n",
+      "\n",
+      "Description of example matrix \"ss_probability_matrix\":\n",
+      "\n",
+      "Description of example matrix \"ww_information_matrix\":\n",
+      "\n",
+      "Description of example matrix \"ars_weight_matrix\":\n",
+      "\n",
+      "Description of example matrix \"nn_saliency_matrix\":\n",
+      "# \n",
+      "# Saliency matrix illustrated in Figure 1F.\n",
+      "# Data are from Figure 1D of Janganathan et al. (2019),\n",
+      "# and were kindly provided by Kyle Farh and Kishore Jaganathan.\n",
+      "# \n",
+      "# References:\n",
+      "# \n",
+      "# Jaganathan K et al. Predicting Splicing from Primary Sequence with\n",
+      "# Deep Learning. Cell. 2019 176(3):535–548.e24.\n",
+      "# \n",
+      "\n",
+      "Description of example matrix \"ars416.txt\":\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# Set names of matrix files\n",
-    "ww_mat_file = 'matrices/ww_info_matrix.txt'\n",
-    "ss_mat_file = 'matrices/ss_prob_matrix.txt'\n",
-    "crp_mat_file = 'matrices/crp_negenergy_matrix.txt'\n",
-    "ars_mat_file = 'matrices/ars_weight_matrix.txt'\n",
-    "saliency_mat_file = 'matrices/saliency_matrix.txt'\n",
-    "ars_seq_file = 'matrices/ars416.txt'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Load matrices\n",
-    "ww_df = pd.read_csv(ww_mat_file, delim_whitespace=True, index_col=0)\n",
-    "ss_df = pd.read_csv(ss_mat_file, delim_whitespace=True, index_col=0)\n",
-    "crp_df = pd.read_csv(crp_mat_file, delim_whitespace=True, index_col=0)\n",
-    "ars_df = pd.read_csv(ars_mat_file, delim_whitespace=True, index_col=0)\n",
-    "saliency_df = pd.read_csv(saliency_mat_file, delim_whitespace=True, index_col=0)\n",
+    "### Load data\n",
     "\n",
-    "# load ars sequence\n",
-    "with open(ars_seq_file,'r') as f:\n",
-    "    ars_seq = f.read()\n",
-    "    \n",
+    "# load all matrices\n",
+    "crp_df = -lm.get_example_matrix('crp_energy_matrix')\n",
+    "ss_df = lm.get_example_matrix('ss_probability_matrix')\n",
+    "ww_df = lm.get_example_matrix('ww_information_matrix')\n",
+    "ars_df = lm.get_example_matrix('ars_weight_matrix')\n",
+    "saliency_df = lm.get_example_matrix('nn_saliency_matrix')\n",
+    "\n",
+    "# load ars wt sequence\n",
+    "with lm.open_example_datafile('ars416.txt') as f:\n",
+    "     ars_seq = f.read()\n",
+    "\n",
     "# trim ars data\n",
     "start=10\n",
     "stop=100\n",
     "ars_df = ars_df.iloc[start:stop,:]\n",
     "ars_df.reset_index(inplace=True, drop=True)\n",
-    "ars_seq = ars_seq[start:stop]\n",
-    "\n",
-    "# saliency matrix\n",
-    "data = np.load('data/importance_score.npz')\n",
-    "saliency_df = pd.DataFrame(data=data['arr_0'].T, columns=list('ACGT'))"
+    "ars_seq = ars_seq[start:stop]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +119,7 @@
        "Text(0, 0.5, 'probability')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -146,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +163,7 @@
        "(-1, 30)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -187,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -220,16 +228,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1158e1cc0>]"
+       "[<matplotlib.lines.Line2D at 0x11df6fd30>]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -268,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
