worked on examples

--- a/logomaker/examples/logos_for_figure.ipynb
+++ b/logomaker/examples/logos_for_figure.ipynb
@@ -250,9 +250,11 @@
     "ars_df = lm.get_example_matrix('ars_enrichment_matrix')\n",
     "\n",
     "# load ars wt sequence\n",
-    "with lm.open_example_datafile('ars416.txt', print_description=False) as f:\n",
-    "     ars_seq = f.read()\n",
-    "\n",
+    "with lm.open_example_datafile('ars_wt_sequence.txt', print_description=False) as f:\n",
+    "    lines = f.readlines()\n",
+    "    lines = [l.strip() for l in lines if '#' not in l]\n",
+    "    ars_seq = ''.join(lines)\n",
+    "    \n",
     "# trim ars matrix and sequence\n",
     "start=10\n",
     "stop=100\n",
