Adding tutorial notebook for creating saliency logos

--- a/logomaker/tutorials/3_transform_between_logos_of_different_types.ipynb
+++ b/logomaker/tutorials/3_transform_between_logos_of_different_types.ipynb
@@ -214,7 +214,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x10bfd6cf8>"
+       "<logomaker.src.Logo.Logo at 0x106383c88>"
       ]
      },
      "execution_count": 3,
@@ -362,7 +362,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x110942ac8>"
+       "<logomaker.src.Logo.Logo at 0x102c7ef60>"
       ]
      },
      "execution_count": 5,
@@ -503,7 +503,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x110f6f358>"
+       "<logomaker.src.Logo.Logo at 0x10636d2e8>"
       ]
      },
      "execution_count": 7,
@@ -644,7 +644,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x1110f5630>"
+       "<logomaker.src.Logo.Logo at 0x106839240>"
       ]
      },
      "execution_count": 9,
@@ -785,7 +785,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x111246fd0>"
+       "<logomaker.src.Logo.Logo at 0x10684d0b8>"
       ]
      },
      "execution_count": 11,
@@ -827,7 +827,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x1113d4f60>"
+       "<logomaker.src.Logo.Logo at 0x106b3e2b0>"
       ]
      },
      "execution_count": 12,
@@ -871,7 +871,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x110df7d68>"
+       "<logomaker.src.Logo.Logo at 0x106b3e320>"
       ]
      },
      "execution_count": 13,
@@ -1164,7 +1164,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x11155dc18>"
+       "<logomaker.src.Logo.Logo at 0x106e2db70>"
       ]
      },
      "execution_count": 15,
@@ -1440,7 +1440,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x111b06748>"
+       "<logomaker.src.Logo.Logo at 0x10724f908>"
       ]
      },
      "execution_count": 17,
@@ -1709,7 +1709,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x1110f5fd0>"
+       "<logomaker.src.Logo.Logo at 0x106c98898>"
       ]
      },
      "execution_count": 19,
@@ -1978,7 +1978,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x112511128>"
+       "<logomaker.src.Logo.Logo at 0x106993f98>"
       ]
      },
      "execution_count": 21,
@@ -2247,7 +2247,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x112511080>"
+       "<logomaker.src.Logo.Logo at 0x107c69320>"
       ]
      },
      "execution_count": 23,
@@ -2517,7 +2517,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x112f0b780>"
+       "<logomaker.src.Logo.Logo at 0x1086649b0>"
       ]
      },
      "execution_count": 25,
@@ -2559,7 +2559,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x11341d748>"
+       "<logomaker.src.Logo.Logo at 0x108bb7898>"
       ]
      },
      "execution_count": 26,
@@ -2719,7 +2719,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Information logos were described in the original 1990 paper of Schneider and Stephens [#weblogo1990]_,\n",
+    "Information logos were described in the original 1990 paper of Schneider and Stephens ([1](#weblogo1990)),\n",
     "and remain the most popular type of sequence logo. The entries $I_{ic}$ in the corresponding information matrices\n",
     "are given by\n",
     "\n",
@@ -2731,6 +2731,30 @@
     "'bits' due to the use of $\\log_2$. A corresponding information logo is drawn\n",
     "using these $I_{ic}$ values as character heights."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='weblogo1990'></a>\n",
+    "Schneider,T.D. and Stephens,R.M. (1990) Nucleic Acids Res., 18, 6097-6100."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
