Updating logomaker documentation: fixed typos in tutorial notebooks and examples

--- a/logomaker/tutorials/1_simple_example_basic_styling.ipynb
+++ b/logomaker/tutorials/1_simple_example_basic_styling.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple Example"
+    "# Simple example"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To get started with Logomaker, we begin by importing three useful python packages and Logomaker"
+    "To get started with Logomaker, we begin by importing some useful python packages and Logomaker"
    ]
   },
   {
@@ -190,19 +190,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Basic Styling"
+    "# Basic styling"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This section introduces basic styling options logomaker provides, applied to the CRP logo from the previous section. We still use the [Logo](https://logomaker.readthedocs.io/en/latest/Logo.html) class (specifically, its constructor) to draw the logo, however we now set a few extra for styling."
+    "This section introduces basic styling options logomaker provides, applied to the CRP logo from the previous section. We still use the [Logo](https://logomaker.readthedocs.io/en/latest/Logo.html) class (specifically, its constructor) to draw the logo, however we now set a few addtional keyword arguments for styling: the *shade_below* and *fade_below* parameters set the amount of shading and fading to use for characters drawn below the x-axis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "Text(0,0.5,'$-\\\\Delta \\\\Delta G$ (kcal/mol)')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -231,11 +231,10 @@
    "source": [
     "# create and style logo\n",
     "logo = lm.Logo(df=crp_df,\n",
-    "                      center_values=True,\n",
-    "                      font_name='Arial Rounded MT Bold',\n",
-    "                      fade_below=0.5,\n",
-    "                      shade_below=0.5,\n",
-    "                      figsize=(10,3))\n",
+    "               font_name='Arial Rounded MT Bold',\n",
+    "               fade_below=0.5,\n",
+    "               shade_below=0.5,\n",
+    "               figsize=(10,3))\n",
     "\n",
     "# set axes labels\n",
     "logo.ax.set_xlabel('Position',fontsize=14)\n",
@@ -248,12 +247,12 @@
    "source": [
     "## Change logo font\n",
     "\n",
-    "The font of the characters drawn in the logo can easily be set by using the keyword argument *font_name*. A complete list of available fonts can by accessed by using the logomaker function *list_font_names()*, (e.g. *lm.list_font_names()*)"
+    "The font of the characters drawn in the logo can easily be set by using the keyword argument *font_name*. A complete list of available fonts can by accessed by using the logomaker function *list_font_names()*, (e.g. call as *lm.list_font_names()*)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +261,7 @@
        "Text(0,0.5,'$-\\\\Delta \\\\Delta G$ (kcal/mol)')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -282,11 +281,10 @@
    "source": [
     "# create and style logo\n",
     "logo = lm.Logo(df=crp_df,\n",
-    "                      center_values=True,\n",
-    "                      font_name='Hobo Std',\n",
-    "                      fade_below=0.5,\n",
-    "                      shade_below=0.5,\n",
-    "                      figsize=(10,3))\n",
+    "               font_name='Hobo Std',\n",
+    "               fade_below=0.5,\n",
+    "               shade_below=0.5,\n",
+    "               figsize=(10,3))\n",
     "\n",
     "# set axes labels\n",
     "logo.ax.set_xlabel('Position',fontsize=14)\n",
