--- a/logomaker/tutorials/2_logos_from_alignment.ipynb
+++ b/logomaker/tutorials/2_logos_from_alignment.ipynb
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Where we have used the Logomaker method [open_example_datafile](https://logomaker.readthedocs.io/en/latest/examples_src.html#open-example-datafile) to read the sequences from a fasta file. We can clean up these raw sequences by running:"
+    "Here we have used the Logomaker method [open_example_datafile](https://logomaker.readthedocs.io/en/latest/examples_src.html#open-example-datafile) to read the sequences from a fasta file. We can clean up these raw sequences by running:"
    ]
   },
   {
@@ -235,7 +235,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x1042477f0>"
+       "<logomaker.src.Logo.Logo at 0x10a4646d8>"
       ]
      },
      "execution_count": 5,
@@ -263,14 +263,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multiple Sequence Alignment With Gaps"
+    "## Multiple sequence alignment with gaps"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Logomaker maker is able to load alignments with gaps in them. We load the WW domain protein alignment ([2](#WWdomain))"
+    "Logomaker maker is able to load alignments with gaps in them. Here, we load the WW domain protein alignment ([2](#WWdomain))"
    ]
   },
   {
@@ -608,7 +608,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x107b275f8>"
+       "<logomaker.src.Logo.Logo at 0x10dd1e198>"
       ]
      },
      "execution_count": 9,
@@ -670,7 +670,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x1085e6320>"
+       "<logomaker.src.Logo.Logo at 0x10e7f64e0>"
       ]
      },
      "execution_count": 11,
