--- a/logomaker/tutorials/4_saliency_logos.ipynb
+++ b/logomaker/tutorials/4_saliency_logos.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Saliency Logos"
+    "# Saliency logos"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Saliency logos are used to represent important nucleotides as predicted by deep neural networks. Logomaker uses the method [Saliency_to_matrix](https://logomaker.readthedocs.io/en/latest/matrix.html#saliency-to-matrix) to represent saliency logos. The inputs to this method are a sequence string, and an array of values corresponding to the saliency of the characters in the sequence string. The output is a dataframe that can be passed in to the [Logo](https://logomaker.readthedocs.io/en/latest/Logo.html) class to see the logo.\n",
+    "Saliency logos are used to represent important nucleotides as predicted by deep neural networks. Logomaker uses the method [Saliency_to_matrix](https://logomaker.readthedocs.io/en/latest/matrix.html#saliency-to-matrix) to represent saliency logos. The inputs to this method are a sequence string, and an array of numerical values corresponding to the saliency of the characters in the sequence string. The output is a dataframe that can be passed in to the [Logo](https://logomaker.readthedocs.io/en/latest/Logo.html) class to see the logo.\n",
     "\n",
-    "We begin importing some useful packages"
+    "We begin by importing some useful packages"
    ]
   },
   {
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SpliceAI Saliency Logo"
+    "## SpliceAI saliency logo"
    ]
   },
   {
@@ -151,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can extract the sequences and values from this dataframe and enter them into the Logo class to see the logo"
+    "We can extract the sequences and values from this dataframe and enter them into the Logo class to see the logo."
    ]
   },
   {
@@ -161,11 +161,113 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>C</th>\n",
+       "      <th>G</th>\n",
+       "      <th>T</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>pos</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>-0.0</td>\n",
+       "      <td>-0.001725</td>\n",
+       "      <td>-0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.033557</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.030026</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.012748</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000337</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x10dd718d0>"
+       "       A    C         G    T\n",
+       "pos                         \n",
+       "0   -0.0 -0.0 -0.001725 -0.0\n",
+       "1    0.0  0.0  0.033557  0.0\n",
+       "2    0.0  0.0  0.030026  0.0\n",
+       "3    0.0  0.0  0.012748  0.0\n",
+       "4    0.0  0.0  0.000337  0.0"
       ]
      },
      "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create saliency matrix\n",
+    "saliency_mat_df = lm.saliency_to_matrix(seq=saliency_data_df['character'], \n",
+    "                                               values=saliency_data_df['value'])\n",
+    "# preview saliency dataframe.\n",
+    "saliency_mat_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<logomaker.src.Logo.Logo at 0x109c8ba90>"
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -183,10 +285,6 @@
     }
    ],
    "source": [
-    "# create saliency matrix\n",
-    "saliency_mat_df = lm.saliency_to_matrix(seq=saliency_data_df['character'], \n",
-    "                                               values=saliency_data_df['value'])\n",
-    "\n",
     "# show logo\n",
     "lm.Logo(saliency_mat_df, figsize=(18,3))"
    ]
