--- a/logomaker/tutorials/6_glyph_objects.ipynb
+++ b/logomaker/tutorials/6_glyph_objects.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Glyph Objects"
+    "# Glyph objects"
    ]
   },
   {
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As an example, the following figure shows how to raw a single character."
+    "As an example, the following figure shows how to raw a single character by using the Glyph class."
    ]
   },
   {
@@ -51,7 +51,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Glyph.Glyph at 0x10fc76ac8>"
+       "<logomaker.src.Glyph.Glyph at 0x10666a550>"
       ]
      },
      "execution_count": 2,
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the code snippet above, we have placed a single glyph at a specified location, with in a specified bounding box (specified by a Matplotlib Axes object `ax`). We now use the same bounding box as above, and use additional keywords to customize the glyph's appearance, and location within the bounding box."
+    "In the code snippet above, we have placed a single glyph 'A' at a specified position `p`, with in a specified bounding box (specified by a Matplotlib Axes object `ax`). We now use the same bounding box as above, and use additional keywords to customize the glyph's appearance, and location within the bounding box."
    ]
   },
   {
@@ -96,7 +96,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Glyph.Glyph at 0x10fde7470>"
+       "<logomaker.src.Glyph.Glyph at 0x1067ef390>"
       ]
      },
      "execution_count": 3,
@@ -150,7 +150,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Glyph.Glyph at 0x10fe12400>"
+       "<logomaker.src.Glyph.Glyph at 0x10681c2b0>"
       ]
      },
      "execution_count": 4,
