Fixed markdown typo in tutorial 3 notebook. Updated logomaker demo

--- a/logomaker/tutorials/3_transform_between_logos_of_different_types.ipynb
+++ b/logomaker/tutorials/3_transform_between_logos_of_different_types.ipynb
@@ -48,7 +48,7 @@
     "    of matrix (e.g. 'information'). To do this, set from_type and to_type\n",
     "    arguments.\n",
     "    \n",
-    "<img src=\"table_for_tutorial_3.png\", height='600',width='600'>\n",
+    "<img src=\"table_for_tutorial_3.png\" height=\"600\" width=\"600\" />\n",
     "\n",
     "Using these five 1-step transformations, 2-step transformations\n",
     "are also enabled, e.g., from_type=‘counts' $\\rightarrow$ to_type=‘information'. We show the transform matrix functionality by transforming the CRP logo.\n",
@@ -232,7 +232,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x106098c18>"
+       "<logomaker.src.Logo.Logo at 0x10b9f9630>"
       ]
      },
      "execution_count": 3,
@@ -299,7 +299,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x106290e10>"
+       "<logomaker.src.Logo.Logo at 0x10b9e6b70>"
       ]
      },
      "execution_count": 5,
@@ -372,7 +372,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x1063fe198>"
+       "<logomaker.src.Logo.Logo at 0x10e326cc0>"
       ]
      },
      "execution_count": 7,
@@ -427,7 +427,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x106263a20>"
+       "<logomaker.src.Logo.Logo at 0x10f620a20>"
       ]
      },
      "execution_count": 9,
@@ -515,7 +515,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x1066f6710>"
+       "<logomaker.src.Logo.Logo at 0x10f795d68>"
       ]
      },
      "execution_count": 12,
@@ -567,7 +567,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x10686f518>"
+       "<logomaker.src.Logo.Logo at 0x10f900860>"
       ]
      },
      "execution_count": 14,
@@ -609,7 +609,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x1069f9160>"
+       "<logomaker.src.Logo.Logo at 0x10f7a8550>"
       ]
      },
      "execution_count": 15,
@@ -652,7 +652,7 @@
     {
      "data": {
       "text/plain": [
-       "<logomaker.src.Logo.Logo at 0x106b776d8>"
+       "<logomaker.src.Logo.Logo at 0x10fc31a20>"
       ]
      },
      "execution_count": 16,
